Modify restaurant views

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Image url</th>
-      <th>Decription</th>
+      <th>Description</th>
       <th>Owner</th>
       <th colspan="3"></th>
     </tr>
@@ -18,7 +18,7 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.image_url %></td>
-        <td><%= restaurant.decription %></td>
+        <td><%= restaurant.description %></td>
         <td><%= restaurant.owner_id %></td>
         <td><%= link_to 'Show', restaurant %></td>
         <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
