--- a/app/views/restaurants/list.html.erb
+++ b/app/views/restaurants/list.html.erb
@@ -1,24 +1,7 @@
 <h1>Favorite Restaurants</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Image url</th>
-      <th>Decription</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @restaurants.each do |restaurant| %>
-      <tr>
-        <td><%= restaurant.name %></td>
-        <td><%= restaurant.image_url %></td>
-        <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    	<%= link_to restaurant do%>
+        <%=image_tag restaurant.image_url %>
+        <%= restaurant.name %>
+      <% end %>
     <% end %>
-  </tbody>
-</table>
