--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,33 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Restaurants</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Image url</th>
-      <th>Description</th>
-      <th>Owner</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<%= render :layout => '/shared/sideNav' do %>
+		<h1>Favorite Restaurants</h1>
     <% @restaurants.each do |restaurant| %>
-      <tr>
-        <td><%= restaurant.name %></td>
-        <td><%= restaurant.image_url %></td>
-        <td><%= restaurant.description %></td>
-        <td><%= restaurant.owner_id %></td>
-        <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    	<%= link_to restaurant do%>
+        <%=image_tag restaurant.image_url %>
+        <%= restaurant.name %>
+      <% end %>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Restaurant', new_restaurant_path %>
+<% end %>
