--- a/app/views/restaurants/list.html.erb
+++ b/app/views/restaurants/list.html.erb
@@ -1,7 +1,9 @@
-<h1>Favorite Restaurants</h1>
+<%= render :layout => '/shared/sideNav' do %>
+		<h1>Favorite Restaurants</h1>
     <% @restaurants.each do |restaurant| %>
     	<%= link_to restaurant do%>
         <%=image_tag restaurant.image_url %>
         <%= restaurant.name %>
       <% end %>
     <% end %>
+<% end %>
