--- a/app/views/restaurants/individualFavRestaurant.html.erb
+++ b/app/views/restaurants/individualFavRestaurant.html.erb
@@ -1,1 +1,10 @@
-Hello
+<%=  render 'shared/sideNav' do %>
+  	<div class="col-10">
+  <h1><%=  @restaurant.name %></h1>
+  <%=image_tag @restaurant.image_url %>
+<% end %>
+<%= content_tag :div,
+  id: "individualRestaurant",
+  data: @restaurant.to_json do %>
+<% end %>
+<%= link_to 'Back', favRestaurantList_path %>
