--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,11 +1,9 @@
-<p>
-  <strong>Name:</strong>
-  <%= @restaurant.name %>
-</p>
-<%=image_tag @restaurant.image_url %>
-<p>
-  <strong>Description:</strong>
-  <%= @restaurant.description %>
-</p>
-
-<%= link_to 'Back', favRestaurantList_path  %>
+<%=  render 'shared/sideNav' do %>
+  	<div class="col-10">
+<%= content_tag :div,
+  id: "individualRestaurant",
+  data: @restaurant.to_json do %>
+<% end %>
+<%= link_to 'Back', favRestaurantList_path %>
+<% end %>
+<%= javascript_pack_tag 'hello_react' %>
