--- a/app/views/restaurants/individualFavRestaurant.html.erb
+++ b/app/views/restaurants/individualFavRestaurant.html.erb
@@ -1,8 +1,10 @@
 <%=  render 'shared/sideNav' do %>
   	<div class="col-10">
+  		In individual
 <%= content_tag :div,
   id: "individualRestaurant",
-  data: @restaurant.to_json do %>
+  data: @restaurant.to_json,
+  food: @food.to_json do %>
 <% end %>
 <%= link_to 'Back', favRestaurantList_path %>
 <% end %>
