--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,7 @@
 <%= render :layout => '/shared/sideNav' do %>
-		<h1>Favorite Restaurants</h1>
-    <% @restaurants.each do |restaurant| %>
-    	<%= link_to restaurant do%>
-        <%=image_tag restaurant.image_url %>
-        <%= restaurant.name %>
-      <% end %>
-    <% end %>
+  	<div class="col-10">
+  		<h1>Restaurants</h1>
+    	<div id="list">
+    	</div>
+  	</div>
 <% end %>
