--- a/app/views/shared/_sideNav.html.erb
+++ b/app/views/shared/_sideNav.html.erb
@@ -4,7 +4,7 @@
     		<div class="p-2 position-fixed">
     			<h2>Tasty.ly</h2>
     			<p><%= link_to "Favorite Restaurants", "/favlist/restaurants" %></p>
-    			<p><%= link_to "Favorite Menu items", "/favlist/restaurants" %></p>
+    			<p><%= link_to "Favorite Menu items", "/favlist/foods" %></p>
     			<p><%= link_to "Search Restaurants", "/restaurants" %></p>
     			<p><%= link_to "Sign out", destroy_user_session_url, method: :delete %></p>
     		</div>
