--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,14 @@
  *= require_tree .
  *= require_self
  */
+@import url('https://fonts.googleapis.com/css?family=Roboto:500&display=swap');
+* {
+	font-family: 'Roboto', sans-serif !important;
+
+	letter-spacing: 0.1em;
+
+}
+
 
 [id="heart"] {
   position: absolute;
