--- a/app/views/shared/_sideNav.html.erb
+++ b/app/views/shared/_sideNav.html.erb
@@ -2,7 +2,9 @@
     <div class="row">
     	<div class="col-2">
     		<div class="p-2 position-fixed">
-    			<h2>Tasty.ly</h2>
+    			<div class="mb-4">
+    			<h2> Tasty.ly</h2>
+    		</div>
     			<p><%= link_to "Favorite Restaurants", "/favlist/restaurants" %></p>
     			<p><%= link_to "Favorite Menu items", "/favlist/foods" %></p>
     			<p><%= link_to "Search Restaurants", "/restaurants" %></p>
