--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:500&display=swap');
 @import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css");
 
-
+a:hover {
+  background-color: transparent;
+  color: #0F22DC !important;
+ text-decoration: none !important;
+}
 * {
 	font-family: 'Roboto', sans-serif !important;
 	letter-spacing: 0.1em;
