--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -10,28 +10,23 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, :class=>'form-control',:required => true%>
   </div>
 
   <div class="field">
     <%= form.label :image_url %>
-    <%= form.text_area :image_url %>
+    <%= form.text_field  :image_url, :class=>'form-control' %>
   </div>
 
   <div class="field">
     <%= form.label :decription %>
-    <%= form.text_area :decription %>
-  </div>
-
-  <div class="field">
-    <%= form.label :owner_id %>
-    <%= form.text_field :owner_id %>
+    <br>
+    <%= form.text_area :decription, :rows=>'3', :class=>'form-control',  :style=>"resize:none;"%>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit  class: "btn btn-primary" %>
   </div>
 <% end %>
