--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Restaurant</h1>
-
-<%= render 'form', restaurant: @restaurant %>
-
-<%= link_to 'Back', restaurants_path %>
+<%=  render 'shared/ownerNav' do %>
+	<div class="col-10 ">
+		<h1>Add Restaurant</h1>
+		<div class="col-10 center-block">
+		<%= render 'form', restaurant: @restaurant %>
+	</div>
+	</div>
+<% end %>
