--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -21,9 +21,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :decription %>
+    <%= form.label :description %>
     <br>
-    <%= form.text_area :decription, :rows=>'3', :class=>'form-control',  :style=>"resize:none;"%>
+    <%= form.text_area :description, :rows=>'3', :class=>'form-control',  :style=>"resize:none;"%>
   </div>
 
   <div class="actions">
