--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -13,20 +13,15 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, :class=>'form-control',:required => true%>
   </div>
 
   <div class="field">
     <%= form.label :price %>
-    <%= form.text_field :price %>
-  </div>
-
-  <div class="field">
-    <%= form.label :restaurant_id %>
-    <%= form.text_field :restaurant_id %>
+    <%= form.text_field :price, :class=>'form-control' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit :class=>'btn btn-primary' %>
   </div>
 <% end %>
