--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Food</h1>
-
-<%= render 'form', food: @food %>
-
-<%= link_to 'Back', foods_path %>
+<%=  render 'shared/ownerNav' do %>
+<div class="col-10 ">
+		<h1>New item</h1>
+			<div class="col-10 center-block">
+			<%= render 'form', food: @food %>
+<div>
+<%end%>
