--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit :class=>'btn btn-primary' %>
+    <%= form.submit "Add Food", :class=>'btn btn-primary' %>
   </div>
 <% end %>
