--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -27,6 +27,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit  class: "btn btn-primary" %>
+    <%= form.submit "Add restaurant",  class: "btn btn-primary" %>
   </div>
 <% end %>
