--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,10 @@
 <%= render :layout => '/shared/sideNav' do %>
   	<div class="col-10">
   		<h1>Restaurants</h1>
-    	<div id="list">
-    	</div>
+  		<%= content_tag :div,
+			  id: "list",
+			  data: @restaurants.to_json do %>
+			<% end %>
   	</div>
 <% end %>
+<%= javascript_pack_tag 'hello_react' %>
