--- a/app/views/foods/list.html.erb
+++ b/app/views/foods/list.html.erb
@@ -4,7 +4,7 @@
   		<%= content_tag :div,
 			  id: "foodList",
 			  data: @restaurants.to_json,
-			  fav: @@favorites.to_json do %>
+			  fav: @favorites.to_json do %>
 			<% end %>
   	</div>
 <% end %>
