--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render :layout => "shared/main" do %>
+<div class="col-4">
 <div class="container">
 	<h2>Restaurant Owner Sign up</h2>
 
@@ -28,3 +30,5 @@
 	<div>
 	<% end %>
 <div>
+	<div>
+	<% end %>
