--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render :layout => "shared/main" do %>
+<div class="col-4">
 <div class="container">
 <h2>User Sign up</h2>
 	<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -23,3 +25,5 @@
 	<% end %>
 	<%= render "devise/shared/links" %>
 </div>
+</div>
+<% end %>
