--- a/app/views/shared/_sideNav.html.erb
+++ b/app/views/shared/_sideNav.html.erb
@@ -7,7 +7,7 @@
     		</div>
     			<p><%= link_to "Favorite Restaurants", "/favlist/restaurants" %></p>
     			<p><%= link_to "Favorite Menu items", "/favlist/foods" %></p>
-    			<p><%= link_to "Search Restaurants", "/restaurants" %></p>
+    			<p><%= link_to "All Restaurants", "/restaurants" %></p>
     			<p><%= link_to "Sign out", destroy_user_session_url, method: :delete %></p>
     		</div>
     	</div>
