Add form for adding food

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,3 +104,8 @@ a:hover {
     transform: scale(1.2);
   }
 }
+.ScrollableContainer {
+   max-width: 300px;
+   max-height: 300px;
+   overflow: auto;
+}
