--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,3 +1,4 @@
+<div class="pt-5">
 <%=  render 'shared/ownerNav' do %>
 	<div class="col-10 ">
 		<h1>Add Restaurant</h1>
@@ -6,3 +7,4 @@
 	</div>
 	</div>
 <% end %>
+</div>
