--- a/app/views/foods/list.html.erb
+++ b/app/views/foods/list.html.erb
@@ -1,11 +1,14 @@
+<div class="pt-5">
 <%=  render 'shared/sideNav' do %>
-  	<div class="col-10">
+  	<div class="col-10 pt-2">
   		<h1>Favorite Food Restaurants</h1>
   		<%= content_tag :div,
 			  id: "foodList",
 			  data: @restaurants.to_json,
 			  fav: @favorites.to_json do %>
 			<% end %>
+		</div>
   	</div>
 <% end %>
+</div>
 <%= javascript_pack_tag 'hello_react' %>
