--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,10 +1,12 @@
-<%= render :layout => '/shared/sideNav' do %>
-  	<div class="col-10">
-  		<h1>Restaurants</h1>
-  		<%= content_tag :div,
-			  id: "list",
-			  data: @restaurants.to_json do %>
-			<% end %>
-  	</div>
-<% end %>
+<div class="pt-5">
+	<%= render :layout => '/shared/sideNav' do %>
+	  	<div class="col-10 pt-2">
+	  		<h1>Restaurants</h1>
+	  		<%= content_tag :div,
+				  id: "list",
+				  data: @restaurants.to_json do %>
+				<% end %>
+	  	</div>
+	<% end %>
+</div>
 <%= javascript_pack_tag 'hello_react' %>
