--- a/app/views/restaurants/ownerRestaurant.html.erb
+++ b/app/views/restaurants/ownerRestaurant.html.erb
@@ -1,3 +1,4 @@
+<div class="pt-5">
 <%=  render 'shared/ownerNav' do %>
 	<div class="col-10">
 		<h1>My Restaurants</h1>
@@ -17,3 +18,4 @@
     </div>
   </div>
 <% end %>
+</div>
