--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,4 @@
+<div class="pt-5">
 <%=  render 'shared/ownerNav' do %>
   	<div class="col-10">
   		<h1><%= @restaurant.name %></h1>
@@ -8,4 +9,5 @@
 			food: @food.to_json do %>
 		<% end %>
 <% end %>
+</div>
 <%= javascript_pack_tag 'hello_react' %>
