--- a/app/views/shared/_ownerNav.html.erb
+++ b/app/views/shared/_ownerNav.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-2">
-			<div class="p-2 position-fixed">
+			<div class="p-2 position-fixed ml-5">
 				<div class="mb-4">
-				<h2> Tasty.ly</h2>
+				<h1 class="website-title"> Tasty.ly</h1>
 			</div>
 				<p><%= link_to "My Restaurants", ownerRestaurant_path %></p>
 				<p><%= link_to "Add Restaurant", new_restaurant_path %></p>
