--- a/app/views/shared/_sideNav.html.erb
+++ b/app/views/shared/_sideNav.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="row">
     	<div class="col-2">
-    		<div class="p-2 position-fixed">
+    		<div class="p-2 position-fixed ml-5">
     			<div class="mb-4">
-    			<h2> Tasty.ly</h2>
+    			<h1 class="website-title"> Tasty.ly</h1>
     		</div>
     			<p><%= link_to "Favorite Restaurants", "/favlist/restaurants" %></p>
     			<p><%= link_to "Favorite Menu items", "/favlist/foods" %></p>
