--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,7 +1,9 @@
 <div class="pt-5">
 <%=  render 'shared/ownerNav' do %>
 	<div class="col-10 ">
+		<div class="text-center pb-3">
 		<h1>Add Restaurant</h1>
+	</div>
 		<div class="col-10 center-block">
 		<%= render 'form', restaurant: @restaurant %>
 	</div>
