--- a/app/views/restaurants/ownerRestaurant.html.erb
+++ b/app/views/restaurants/ownerRestaurant.html.erb
@@ -1,7 +1,9 @@
 <div class="pt-5">
 <%=  render 'shared/ownerNav' do %>
 	<div class="col-10">
+		<div class="text-center pb-3">
 		<h1>My Restaurants</h1>
+	</div>
 				<div class="container">
 				  <div class="row">
 						<% @restaurants.each do |restaurant| %>
