Add default picture

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,3 +125,7 @@ font-family: 'Cormorant Upright', serif !important;
 	height:25vh;
 	overflow-x: auto;
 }
+.menuHeight{
+		height:30vh;
+	overflow-x: auto;
+}
