--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -17,7 +17,7 @@
 
   <div class="field">
     <%= form.label :image_url %>
-    <%= form.text_field  :image_url, :class=>'form-control', :required => true %>
+    <%= form.text_field  :image_url, :class=>'form-control'%>
   </div>
 
   <div class="field">
