--- a/app/views/shared/_ownerNav.html.erb
+++ b/app/views/shared/_ownerNav.html.erb
@@ -6,10 +6,13 @@
 				<h1 class="website-title"> Tasty.ly</h1>
 			</div>
 				<p><%= link_to "My Restaurants", ownerRestaurant_path %></p>
-				<div class="restaurantHeight mb-3 ml-2">
+				<div class="restaurantHeight">
+					<ul style="list-style-type:none;margin:0 0 2vh -2vw">
 				<% @ownerRestaurants.each do |r|%>
-				<a class="navRLinks" href='/restaurants/<%= r.id %>'><%= r.name %></a>
+				<li class="mb-2">
+				<a class="navRLinks" href='/restaurants/<%= r.id %>'><%= r.name %></a><li>
 				<% end %>
+				<ul>
 			</div>
 				<p><%= link_to "Add Restaurant", new_restaurant_path %></p>
 				<p><%= link_to "Sign out", destroy_owner_session_url, method: :delete %></p>
