Add favorite information

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,9 +12,11 @@
 			id: "addFoodItem",
 			restaurant: @restaurant.to_json,
 			food: @food.to_json,
-			restaurant_likes: @restaurant_likes.to_json do %>
+			restaurant_likes: @restaurant_likes.to_json,
+			food_likes: @food_likes.to_json do %>
 		<% end %>
 	</div>
+</div>
 	</div>
 <% end %>
 </div>
